--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<h2>Coronavirus Statistics - India, USA, China, European Union (as of May 1, 2020)</h2>
+<h2>Coronavirus Statistics (as of May 1, 2020)</h2>
 <br>
 <svg id="map" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="1795.2" height="875.1" viewBox="0 0 1795.2 875.1">
   <defs>
